# sentinel

./: .gitignore  README.md  pyproject.toml
examples/: demo.py
examples/policies/: research_sandbox.yaml
tests/: test_sentinel.py
