[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sentinel-ai"
version = "1.0.0"
description = "Execution plane for agentic AI — the mandatory boundary between intent and action"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Preeti Parihar", email = "itspparihar@gmail.com"}
]
keywords = [
    "ai-safety", "agentic-ai", "multi-agent", "execution-control",
    "tool-authorization", "llm-governance", "agent-security"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.3",
]
server = [
    "uvicorn[standard]>=0.27.0",
    "gunicorn>=21.0",
]

[project.scripts]
sentinel-api = "sentinel.surfaces.api:app"
sentinel-sidecar = "sentinel.surfaces.sidecar:sidecar_app"

[project.urls]
Homepage = "https://github.com/bgtlabs/sentinel"
Repository = "https://github.com/bgtlabs/sentinel"

[tool.setuptools.packages.find]
where = ["."]
include = ["sentinel*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
